@@ -1,21 +1,18 @@
 package is.hi.hbv501gteam23.Controllers;
 
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import is.hi.hbv501gteam23.Persistence.Entities.Match;
 import is.hi.hbv501gteam23.Persistence.dto.MatchDto;
 import is.hi.hbv501gteam23.Persistence.dto.MatchDto.MatchResponse;
 import is.hi.hbv501gteam23.Services.Interfaces.MatchService;
 import lombok.RequiredArgsConstructor;
+import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-
 import java.net.URI;
-import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * REST controller that exposes read/write operations for {@link Match} resources.
@@ -34,40 +31,19 @@ public class MatchController {
      * All parameters are optional; when a parameter is {@code null}, it is ignored in the filter.
      * The result can be sorted by a given field and direction.
      *
-     * @param startDate    lower bound for the match date
-     * @param endDate      upper bound for the match date
-     * @param homeGoals    exact number of goals scored by the home team
-     * @param awayGoals    exact number of goals scored by the away team
-     * @param homeTeamName name of the home team to filter by
-     * @param awayTeamName name of the away team to filter by
-     * @param venueName    name of the venue to filter by
-     * @param sortBy       field to sort by (defaults to {@code "id"} if not provided)
-     * @param sortDir      sort direction, either {@code "ASC"} or {@code "DESC"} (defaults to {@code "ASC"})
+     * @param filter  filter parameters for listing matches
      * @return {@link ResponseEntity} with status 200 (OK) containing a list of
      * {@link MatchDto.MatchResponse} that match the given filters
      */
     @GetMapping
     @Operation(summary = "List matches")
-    public ResponseEntity<List<MatchDto.MatchResponse>> listMatches(
-            @RequestParam(required = false) LocalDate startDate,
-            @RequestParam(required = false) LocalDate endDate,
-            @RequestParam(required = false) Integer homeGoals,
-            @RequestParam(required = false) Integer awayGoals,
-            @RequestParam(required = false) String homeTeamName,
-            @RequestParam(required = false) String awayTeamName,
-            @RequestParam(required = false) String venueName,
-            @Parameter @RequestParam(required = false,defaultValue = "id") String sortBy,
-            @Parameter @RequestParam(required = false,defaultValue = "ASC") String sortDir
-    )
-    {
-        List<Match> matches=matchService.findMatchFilter(startDate,endDate,homeGoals,awayGoals,homeTeamName,awayTeamName
-                ,venueName,sortBy,sortDir);
-
-        List<MatchDto.MatchResponse> response = matches.stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
+    public List<MatchResponse> listMatches(
+        @ParameterObject @ModelAttribute MatchDto.MatchFilter filter
+    ) {
+        List<Match> matches = matchService.findMatchFilter(filter);
+        return matches.stream()
+                      .map(this::toResponse)
+                      .toList();
     }
 
     /**
@@ -107,10 +83,25 @@ public class MatchController {
      * mapped to {@link MatchResponse}
      */
     @PatchMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
     @Operation(summary = "Modify a match")
     public ResponseEntity<MatchDto.MatchResponse> updateMatch(@PathVariable Long id, @RequestBody MatchDto.PatchMatchRequest body) {
         Match updatedMatch = matchService.patchMatch(id, body);
         return ResponseEntity.ok(toResponse(updatedMatch));
+    }
+
+    /**
+     * Deletes a match by its ID.
+     *
+     * @param id the ID of the match to delete
+     * @return {@link ResponseEntity} with status 204 (NO CONTENT) if deletion succeeds
+     */
+    @DeleteMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    @Operation(summary = "Delete a match")
+    public ResponseEntity<Void> deleteMatch(@PathVariable Long id) {
+        matchService.deleteMatch(id);
+        return ResponseEntity.noContent().build();
     }
 
     /**
